# hackathon2_phase-1

./: README.md  main.py  pyproject.toml
.claude/: settings.local.json
.specify/memory/: constitution.md
history/prompts/console-todo-app/: 3-create-python-console-todo-spec.spec.prompt.md  4-create-implementation-plan.plan.prompt.md  5-create-task-decomposition.tasks.prompt.md  6-complete-implementation.tasks.prompt.md
history/prompts/constitution/: 1-create-project-constitution.constitution.prompt.md  2-update-project-constitution-simplification.constitution.prompt.md
specs/001-console-todo-app/: data-model.md  plan.md  quickstart.md  spec.md  tasks.md
specs/001-console-todo-app/checklists/: requirements.md
src/: task.py  task_manager.py
